--- a/FMBGApp/src/main/resources/.h2.server.properties
+++ b/FMBGApp/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Wed Dec 22 17:49:56 EST 2021
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/fmbgapp|FMBGApp
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
