--- a/FMBGApp/.yo-rc.json
+++ b/FMBGApp/.yo-rc.json
@@ -42,6 +42,8 @@
     "devServerPort": 4200,
     "clientPackageManager": "npm",
     "languages": ["en"],
-    "enableGradleEnterprise": false
+    "enableGradleEnterprise": false,
+    "lastLiquibaseTimestamp": 1640314401000,
+    "entities": ["Boardgames"]
   }
 }
