--- a/fmbg/pom.xml
+++ b/fmbg/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>fmbg</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>fmbg</name>
-	<description>Passion Project for Find Me a Board Game!</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
