--- a/fmbg/pom.xml
+++ b/fmbg/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>fmbg</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>fmbg</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Passion Project: Find Me a Board Game</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -35,6 +35,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.13.1</version>
 		</dependency>
 	</dependencies>
 
