--- a/fmbg/src/main/resources/application.properties
+++ b/fmbg/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+## MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/boardgames
+spring.datasource.username=potato
+spring.datasource.password=taters
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto=update
