--- a/fmbg/pom.xml
+++ b/fmbg/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.13.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
