--- a/fmbg/pom.xml
+++ b/fmbg/pom.xml
@@ -47,7 +47,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.49</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
