--- a/fmbg/src/main/resources/application.properties
+++ b/fmbg/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/boardgames
-spring.datasource.username=potato
-spring.datasource.password=taters
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
