--- a/fmbg/pom.xml
+++ b/fmbg/pom.xml
@@ -52,7 +52,25 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>net.kaczmarzyk</groupId>
+			<artifactId>specification-arg-resolver</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.3.14</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
