--- a/fmbg/src/main/resources/application.properties
+++ b/fmbg/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
+api.host.url=https://api.boardgameatlas.com/api/search?name=Catan
