--- a/fmbg/src/main/resources/application.properties
+++ b/fmbg/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
-api.host.url=https://api.boardgameatlas.com/api/search?name=Catan
+rest.api.boardgame.url=https://api.boardgameatlas.com/api/search
+rest.api.boardgame.client-id=a5PDFkKaa5
