--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,12 @@
 			<artifactId>spring-test</artifactId>
 			<version>5.3.14</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
