--- a/src/main/angular-fmbg/angular.json
+++ b/src/main/angular-fmbg/angular.json
@@ -26,8 +26,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/theme.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
