--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.data.jpa.repositories.bootstrap-mode=default
 rest.api.boardgame.url=https://api.boardgameatlas.com/api/search
 rest.api.boardgame.client-id=a5PDFkKaa5
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.driverClassName=org.postgresql.Driver
+# spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
